@@ -18,6 +18,8 @@ Version 1.5.11+svn:
  * WML Engine:
    * Fix incorrect or doubled "sighted" events when delaying shroud update.
    * Fix sometimes doubled "select" events.
+ * Miscellaneous and bug fixes:
+   * Align all network buffers on 4 bytes
 
 Version 1.5.11:
  * Campaigns:
